<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >
    
    <AutoCompleteTextView
        android:id="@+id/auto_complete_text_view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hint_auto_complete_text_view_location"
        android:inputType="textPostalAddress" />
    
    <TextView
        android:id="@+id/text_view_notify_when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_complete_text_view_location"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/location_picker_notify_when"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<RadioGroup
        android:id="@+id/radio_group_notify_when"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/text_view_notify_when"
	    android:layout_marginTop="5dp"
	    android:orientation="vertical" >
	    <RadioButton
	        android:id="@+id/radio_button_entering"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/location_picker_entering_location"
	        android:checked="true" />
	    <RadioButton
	        android:id="@+id/radio_button_exiting"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/location_picker_exiting_location" />
	</RadioGroup>

</RelativeLayout>